<resources>
    <string name="app_name">Petik Care</string>
    <string name="splashscreen">Splashscreen</string>

    <!--    Halaman Login-->
    <string name="sign_in">Sign In</string>
    <string name="silahkan_login">Silahkan login untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>


    <!--    Halaman Home Fragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="welcome_user">Welcome User</string>
    <string name="show_more">Show More</string>
    <string name="keluhan_hari">Keluhan hari ini</string>
    <string name="role">Role</string>


    <!--    menu_Keluhan-->
    <string name="nama_santri">👤 Nama Santri</string>
    <string name="keluhan">📌 Keluhan</string>
    <string name="date">🕒 Date</string>
    <string name="status">Status</string>
    <string name="detail">Detail</string>

    <!--    Cardview Riwayat Keluhan-->
    <string name="riwayat_keluhan">Keluhan \n Riwayat Keluhan</string>
    <string name="lihat_stok_obat">Obat\n Lihat Stok Obat</string>
    <string name="buat_keluhan">Santri\n Buat Keluhan</string>


    <!--    Halaman Detail Keluhan-->
    <string name="detail_keluhan">Detail Keluhan</string>
    <string name="dibuat">🕒 Dibuat:</string>
    <string name="ditangani">🕒 Ditangani:</string>
    <string name="obat_diberikan">💊 Obat yang diberikan</string>
    <string name="quantity">Quantity</string>
    <string name="batalkan_penanganan">Batalkan Penanganan</string>


    <!--    Menu Bottom Navigation-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <!--    Halaman Search-->
    <string name="cari_keluhan">Cari Keluhan</string>
    <string name="masukkan_kata_kunci">Masukkan kata kunci...</string>
    <string name="pencarian_terakhir">Pencarian Terakhir</string>

    <!--    Halaman Keluhan-->
    <string name="keluhan_santri">Keluhan Santri</string>
    <string name="daftar_obat">💊 Daftar Obat</string>
    <string name="simpan">Simpan</string>
    <string name="catatan">📝Catatan</string>
    <string name="input_catatan">Masukkan catatan disini</string>
    <string name="tambah_obat">+ Tambah Obat Lain</string>
    <string name="qty">Qty</string>

    <!--    Halaman Riwayat Keluhan-->
    <string name="riwayat">Riwayat Keluhan</string>

    <!--    Halaman PendingFragment-->
    <string name="pending">Pending</string>
    <string name="tidak_ada_pending">Tidak ada data yang pending</string>

    <!--    Halaman Selesai-->
    <string name="selesai">Selesai</string>

    <!--    Halaman Profil-->
    <string name="profil">Profil</string>
    <string name="profil_foto">Profile Foto</string>
    <string name="nama">Nama</string>
    <string name="nama_user">Nama User</string>
    <string name="nama_role">Nama Role</string>
    <string name="edit">Edit</string>

    <!--    Halaman Obat-->
    <string name="obat">Obat</string>
    <string name="nama_obat">💊 Nama Obat</string>
    <string name="description">📝 Deskripsi</string>
    <string name="stok_obat">📦 Stok Obat</string>
    <string name="diupdate">🕒 Diupdate:</string>
    <string name="sediaan">🧪 Sediaan</string>
    <string name="buat_obat">Buat Obat</string>
    <string name="edit_obat">Edit Obat</string>

    <!--    Halaman Restock Obat-->
    <string name="restock_stok_obat">Restock Obat</string>
    <string name="stok_sekarang">Stok Sekarang:</string>
    <string name="input_stok_baru">Input stok baru</string>

    <!--    Halaman Edit Obat-->
    <string name="masukkan_nama_baru">Masukkan nama obat terbaru</string>
    <string name="contoh_paracetamol">Contoh Paracetamol</string>
    <string name="masukkan_jenis">Masukkan jenis obat</string>

    <!--    Notification-->
    <string name="title">Keluhan selesai</string>
    <string name="message">Silahkan cek detail untuk melihat respon</string>

    <!--    Halaman Cretae Keluhan Santri-->
    <string name="buat_keluhan_santri">Buat Keluhan Santri</string>
    <string name="masukkan_keluhan">Masukkan keluhan anda</string>
    <string name="keterangan">📝 Keterangan</string>
    <string name="masukkan_keterangan">Masukkan keterangan keluhan anda</string>
    <string name="simpan_keluhan">Simpan Keluhan</string>
    <string name="hapus_keluhan">Hapus keluhan</string>

    <!--    Menu lihat keluhan saya-->
    <string name="lihat_keluhan_saya">Santri\nLihat Keluhan Saya</string>
    <string name="pengasuhan">Pengasuhan</string>
    <string name="santri">Santri</string>
    <string name="lihat_keluhan">Lihat Keluhan</string>

    <string name="belum_ada_keluhan">Belum ada keluhan saya</string>

</resources>