<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keluhan_santri"
        android:fontFamily="@font/poppins_medium"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_santri"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"/>

    <TextView
        android:id="@+id/tv_keluhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keluhan"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_pilih_obat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/pilih_obat"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spinner_obat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/catatan"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_catatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_catatan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_catatan"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_linear_green"
        android:text="@string/simpan"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        app:backgroundTint="@null"
        android:layout_marginHorizontal="50dp"/>

</LinearLayout>