<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="16dp"
    android:backgroundTint="@color/white"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nama_obat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_obat"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_stok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok_obat"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/tv_dibuat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dibuat"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_diupdate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/diupdate"/>

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_linear_green"
                app:backgroundTint="@null"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/edit_obat"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>