<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/banckground_home"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_petikcare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_detail_keluhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/detail_keluhan"
        android:textColor="#53BF6C"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/cv_keluhan"
        app:layout_constraintTop_toBottomOf="@+id/iv_arrow_back" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_keluhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_keluhan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/nama_santri" />

            <TextView
                android:id="@+id/tv_keluhan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/keluhan" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_nama_obat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_obat"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:fontFamily="@font/poppins_medium"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_catatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catatan"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:id="@+id/tv_ditangani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ditangani" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/status" />

                <Button
                    android:id="@+id/btn_batal_penanganan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batalkan_penanganan"
                    style="@style/Widget.Material3.Button.TonalButton"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>