<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    android:backgroundTint="@color/white"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_santri"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_keluhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keluhan"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="5dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_semibold"
                app:cornerRadius="12dp"
                app:backgroundTint="#FFA0BC"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>