<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.EditObatFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/background_dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_edit_stok_obat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/edit_obat"
        android:textColor="#53BF6C"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_arrow_back"
        app:layout_constraintStart_toEndOf="@+id/iv_arrow_back"
        app:layout_constraintTop_toTopOf="@+id/iv_arrow_back" />

    <TextView
        android:id="@+id/tv_nama_obat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/nama_obat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_stok_obat" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nama_obat_baru"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/masukkan_nama_baru"
        android:textColorHint="#808080"
        app:layout_constraintStart_toStartOf="@+id/tv_nama_obat"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_obat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nama_obat_baru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_contoh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/contoh_paracetamol"
        app:layout_constraintStart_toStartOf="@+id/til_nama_obat_baru"
        app:layout_constraintTop_toBottomOf="@+id/til_nama_obat_baru" />

    <TextView
        android:id="@+id/tv_sediaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sediaan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contoh" />

    <Spinner
        android:id="@+id/spinner_item_obat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sediaan" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/simpan"
        android:background="@drawable/btn_linear_green"
        app:backgroundTint="@null"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_item_obat" />

</androidx.constraintlayout.widget.ConstraintLayout>